--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                     <p><strong>Email:</strong> ${finalData.email || email}</p>
                     <p><strong>Job Title:</strong> ${finalData.jobTitle || 'Not provided'}</p>
                     <p><strong>Lifecycle Stage:</strong> ${finalData.lifecycleStage || 'Unknown'}</p>
-                    <p><strong>Last Activity:</strong> ${finalData.lastActivity || 'Not available'}</p>
+                    <p><strong>Last Contact Date:</strong> ${finalData.lastContactDate || 'Not available'}</p>
                 </div>
                 
                 <div class="company-info">
